[package]
name = "learn-rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"   # Restful api
serde = { version = "1.0", features = ["derive"] }  # Serialize / Deserialize json
serde_json = "1.0"
redis = { version = "0.21", features = ["r2d2", "cluster", "connection-manager", "tokio-comp", "tokio-native-tls-comp"] }

r2d2 = "0.8.10"
# r2d2_redis = "0.14.0"

